# gce-english-backend-core

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/auth/: router.py  schemas.py  security.py
app/api/documents/: __init__.py  router.py  schemas.py
app/api/sync/: __init__.py  router.py
app/config/: __init__.py  logger.py  settings.py
app/db/: __init__.py  supabase.py
app/services/: __init__.py  answer_key.py  auth.py  embeddings.py  html_renderer.py  ocr.py  paper_generator.py  rag.py  sync.py  visuals.py
app/templates/: oral.html  paper_1.html  paper_2.html
docs/: API.md  FRONTEND_INTEGRATION.md
scripts/: generate_all_papers.py  generate_all_papers_for_review.py  generate_test_papers.py  milestone1_demo.py
tests/: test_answer_key.py  test_content_validation.py  test_document_ingestion.py  test_html_renderer.py  test_rag.py  test_schemas.py
